--- a/Cheeta/Views/DebtsCustomCell/DebtsTableViewCell.xib
+++ b/Cheeta/Views/DebtsCustomCell/DebtsTableViewCell.xib
@@ -13,36 +13,49 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DebtCustomCell" id="KGk-i7-Jjw" customClass="DebtsTableViewCell" customModule="Cheeta" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DebtCustomCell" rowHeight="50" id="KGk-i7-Jjw" customClass="DebtsTableViewCell" customModule="Cheeta" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="51.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="47.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPi-oc-w9a">
-                        <rect key="frame" x="30" y="11" width="209" height="25"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                        <rect key="frame" x="30" y="13" width="209" height="22"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68y-cn-lGo">
-                        <rect key="frame" x="247" y="11" width="97" height="25"/>
+                        <rect key="frame" x="247" y="13" width="97" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="97" id="0mv-Ye-3an"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3C-yI-osB">
+                        <rect key="frame" x="30" y="47" width="315" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="APR-lS-YJv"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="68y-cn-lGo" secondAttribute="trailing" constant="15" id="13H-lW-Tce"/>
-                    <constraint firstItem="68y-cn-lGo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Fh3-v6-SlU"/>
+                    <constraint firstItem="68y-cn-lGo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="69g-ad-oL0"/>
+                    <constraint firstAttribute="bottom" secondItem="Z3C-yI-osB" secondAttribute="bottom" id="6iM-Ub-4Z2"/>
+                    <constraint firstItem="68y-cn-lGo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="Fh3-v6-SlU"/>
+                    <constraint firstItem="pPi-oc-w9a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="JOA-M2-aKu"/>
+                    <constraint firstItem="Z3C-yI-osB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="Prk-PY-v1N"/>
+                    <constraint firstAttribute="trailing" secondItem="Z3C-yI-osB" secondAttribute="trailing" constant="30" id="cYL-90-nBC"/>
                     <constraint firstItem="68y-cn-lGo" firstAttribute="leading" secondItem="pPi-oc-w9a" secondAttribute="trailing" constant="8" symbolic="YES" id="dsg-hA-9iW"/>
                     <constraint firstItem="pPi-oc-w9a" firstAttribute="baseline" secondItem="68y-cn-lGo" secondAttribute="baseline" id="poK-gz-k91"/>
                     <constraint firstItem="pPi-oc-w9a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="14" id="su5-5T-UtS"/>
+                    <constraint firstItem="Z3C-yI-osB" firstAttribute="top" secondItem="pPi-oc-w9a" secondAttribute="bottom" constant="12" id="y4p-tJ-lI3"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -51,7 +64,7 @@
                 <outlet property="debtAmountInCell" destination="68y-cn-lGo" id="90J-Lf-JVC"/>
                 <outlet property="memberLabelInCell" destination="pPi-oc-w9a" id="Ct6-uX-RSl"/>
             </connections>
-            <point key="canvasLocation" x="33.5" y="54"/>
+            <point key="canvasLocation" x="33.5" y="53"/>
         </tableViewCell>
     </objects>
 </document>
